tests/ui/field_attr_unknown.stderr
error: unknown function_call attribute (expected: skip, rename, description)
 --> tests/ui/field_attr_unknown.rs:5:21
  |
5 |     #[function_call(bogus)]
  |                     ^^^^^
